# mcp-server

./: Dockerfile  README.md  logger.py  pyproject.toml  server.py
memgraph/: Dockerfile  README.md  memgraph.py
tools/: weather.py  youtube.py
weather/: Dockerfile  weather.py
youtube/: Dockerfile  youtube.py
