[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "youtube-transcript-api>=1.0.3",
    "neo4j>=5.15.0",
]
[project.entry-points."mcp"]
youtube = "youtube.youtube:mcp"
knowledge_graph = "memgraph.memgraph:mcp"
weather = "weather.weather:mcp"